--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "dependencies": {
     "@prisma/client": "^4.2.0",
+    "apollo-server-micro": "^3.10.0",
+    "graphql": "^16.5.0",
+    "micro": "^9.4.1",
+    "micro-cors": "^0.1.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "eslint": "8.21.0",
