--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@graphql-codegen/cli": "^2.11.5",
     "@prisma/client": "^4.2.0",
     "apollo-server-micro": "^3.10.0",
     "graphql": "^16.5.0",
@@ -18,6 +20,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.11.5",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-resolvers": "^2.7.3",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
