--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:1234@localhost:5432/nextggllinks?schema=public"
+
+NEXT_PUBLIC_GRAPHQL_URL=http://localhost:3000/api/graphql 
