--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@graphql-codegen/cli": "^2.11.5",
     "@prisma/client": "^4.2.0",
     "apollo-server-micro": "^3.10.0",
